# DigitalSignalProcessing_SoA

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/dsp/: processor.py  reverberation.py
backend/ml/: predict.py  train.py
backend/tests/: test_reverberation.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  keys.ts  main.ts  types.ts
frontend/src/components/: ShowWave.vue  UploadFile.vue
frontend/src/router/: index.ts
frontend/src/styles/: utils.css
frontend/src/views/: AdvancedView.vue  HomeView.vue
