[tool.poetry]
name = "backend"
version = "0.2.0"
authors = ["Ylingu <wzorlite@gmail.com>"]
package-mode = false
packages = [{include = "dsp"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sox = "^1.5.0"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
exp = "dsp.processor:main"
start = "main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
extend-select = ["I", "N", "PL", "UP", "E501", "NPY", "RUF100"]
unfixable = ["F401"]